<resources xmlns:tools="http://schemas.android.com/tools"
tools:ignore="MissingTranslation" >

    <string name="app_name">EmerText</string>
    <string name="helloworld" translatable="false">Hello world!</string>
    <string name="firstName">First name</string>
    <string name="surname">Surname</string>
    <string name="title_activity_details_form">Enter your details</string>
    <string name="address_line_1">Address 1</string>
    <string name="address_line_2">Address 2</string>
    <string name="county">County</string>


    <string-array name="county_list">
        <item>Dublin</item>
        <item>Wicklow</item>
        <item>Galway</item>
        <item>Donegal</item>
        <item>Meath</item>
        <item>Mayo</item>
        <item>Westmeath</item>
        <item>Cork</item>
        <item>Carlow</item>
        <item>Cavan</item>
        <item>Clare</item>
        <item>Kerry</item>
        <item>Kildare</item>
        <item>Kilkenny</item>
        <item>Laois</item>
        <item>Leitrim</item>
        <item>Limerick</item>
        <item>Longford</item>
        <item>Louth</item>
        <item>Offaly</item>
        <item>Roscommon</item>
        <item>Sligo</item>
        <item>Tipperary</item>
        <item>Waterford</item>
        <item>Wexford</item>

    </string-array>

    <string name="title_activity_location">Location Details</string>
    <string name="location">Location</string>
    <string name="emertype">Emergency Type</string>
    <string name="whois">People With You?</string>
    <string name="exdetails">Extra Details</string>
    <string name="gobacktopreviousscreen">Go back to Interaction screen</string>

    <string-array name="emer_type">
        <item>Heart Attack</item>
        <item>Injury</item>
        <item>Seizure</item>
        <item>Fall</item>
        <item>Crime</item>
        <item>Fire</item>
        <item>Stroke</item>
    </string-array>
    <string name="action_settings">Settings</string>

    <string name="title_activity_map_pin">Map</string>

    <string name="button">Button</string>
    <string name="send_message">Send dummy message!</string>
    <string name="delivery_pending">I will return to the main screen when message is delivered!</string>
    <string name="welcome_screen_button">3. Go to the home screen</string>
    <string name="default_emergency_number">112</string>
    <string name="eircode">Eircode</string>
    <string name="personal_details_file">personaldets</string>
    <string name="title_activity_tabbed_details">Personal details</string>


    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="lock_using_fingerprint">Lock using fingerprint or PIN</string>
    <string name="lock_using_pin">Lock using PIN/Fingerprint</string>
    <string name="medical_allergies_hint">Enter any medical allergies you might need noted here.</string>
    <string name="current_meds_hint">Enter any medication you may be taking here</string>
    <string name="next_kin_details">Next-of-kin details</string>

    <!--Strings for the welcome page-->
    <string name="talk_str_btn">Talk to Passerby</string>
    <string name="Per_Det_btn">Personal Details</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medicinal_allegies">Medicinal allergies</string>
    <string name="basic_details">Basic details</string>
    <string name="medical_other_information">Medical/other information</string>
    <string name="medical_information">Medical information</string>
    <string name="other_information">Other information</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="current_medications">Current medications</string>
    <string name="contact_name">Contact name</string>
    <string name="emergency_contact_phone_number">Contact\'s phone number</string>
    <string name="from_contacts">From contacts</string>
    <string name="no_contacts_permission_error">You must grant contacts permission.</string>

    <!-- Stored value keys here-->
    <string name="useFingerprint_key" translatable="false">useFingerprint</string>
    <string name="setup_complete_key" translatable="false">details_initialised</string>
    <string name="fname_key" translatable="false">fname_key</string>
    <string name="lname_key" translatable="false">lname_key</string>
    <string name="address_1_key" translatable="false">address_1_key</string>
    <string name="address_2_key" translatable="false">address_2_key</string>
    <string name="county_key" translatable="false">county_key</string>
    <string name="eircode_key" translatable="false">eircode_key</string>

    <string name="allergies_key">allergies_key</string>
    <string name="current_meds_key">current_meds_key</string>
    <string name="emergency_contact_name_key">emergency_contact_name_key</string>

    <string name="emergency_contact_number_key">emergency_contact_number_key</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="connected_to_supported_network">Connected to supported network</string>
    <string name="sim_operator_is_of_supported_network">SIM operator is of supported network</string>
    <string name="sim_and_connected_network_matches">SIM and connected network matches</string>
    <string name="status">Status</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_splash">In order to get you set up, you should first register for the SMS service below, and then proceed to enter any details you may wish to have on hand.</string>
    <string name="register_button_text">1. Register</string>
    <string name="enter_your_details_button_text">2. Enter your details</string>
    <string name="required_permissions">Required permissions</string>
    <string name="send_sms">Send SMS</string>
    <string name="no_sms_permission_error">You must grant SMS permission.</string>
    <string name="enter_any_medical_conditions_others_may_need_to_be_aware_of">Enter any medical conditions others may need to be aware of</string>
    <string name="medical_conditions_key">medical_conditions_key</string>
    <string name="custom_message_hint">Enter any custom message you wish here</string>
    <string name="custom_message_key">custom_message_key</string>
    <string name="emergency_service_number_key">emergency_service_number_key</string>
    <string name="override_emergency_services_number">Override emergency services number (dangerous)</string>
    <string name="emergency_services_number_textview">Emergency services number </string>
    <string name="include_ice_contact_info">Include ICE contact info</string>
    <string name="include_medical_conditions">Include medical conditions</string>
    <string name="please_scan_your_finger">Please Scan your Finger</string>
    <string name="dublin">"Dublin "</string>
    <string name="ignore">ignore</string>

</resources>
