<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.don.emertext.EmergencyContactDetails">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:text="Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
             />

        <TextView
        android:text="@string/next_kin_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fnameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"

                android:hint="@string/firstName"
                android:inputType="textPersonName"
                android:tag="@string/fname_key" />

            <EditText
                android:id="@+id/lnamepinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"

                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:tag="@string/lname_key" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
