<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.don.emertext.DetailsForm">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/overrideNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/default_emergency_number"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fnameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"

                android:hint="@string/firstName"
                android:inputType="textPersonName"
                android:onClick="revealOverride" />

            <EditText
                android:id="@+id/lnamepinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"

                android:hint="@string/surname"
                android:inputType="textPersonName" />
        </LinearLayout>

        <EditText
            android:id="@+id/address1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/address_line_1"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/address2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/address_line_2"
            android:inputType="textPostalAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/eircode_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/eircode"
                android:onClick="autosetDublin"
                android:inputType="textCapCharacters|textNoSuggestions"
                android:maxLength="7" />

            <AutoCompleteTextView
                android:id="@+id/county_select_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:completionThreshold="1"

                android:hint="@string/county"/>
        </LinearLayout>

        <Button
            android:id="@+id/details_form_send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendSMS"
            android:text="@string/send_message" />

        <Button
            android:id="@+id/save_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveValues"
            android:text="@string/save_form_values" />

        <TextView
            android:id="@+id/return_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_pending"
            android:visibility="invisible" />


    </LinearLayout>


</RelativeLayout>
