<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.don.emertext.MainActivity">




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/network_status_layout_block">

        <TextView
            android:text="@string/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp" />

        <TextView
            android:drawableLeft="@drawable/yellow_warning"
            android:text="@string/connected_to_supported_network"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/net_status_text"
            android:layout_weight="1" />

        <TextView
            android:drawableLeft="@drawable/yellow_warning"
            android:text="@string/sim_operator_is_of_supported_network"
            android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sim_status_text"
                android:layout_weight="1" />

        <TextView
            android:drawableLeft="@drawable/yellow_warning"
            android:text="@string/sim_and_connected_network_matches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/network_match_text"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:text="@string/ignore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ignore_button" />


</LinearLayout>
