<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.don.emertext.MedicalInformation">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:text="@string/medical_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

            <EditText
                android:id="@+id/allegies_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine"
                android:hint="@string/medicinal_allegies"
               />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        </LinearLayout>


        <TextView
            android:id="@+id/return_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_pending"
            android:visibility="invisible" />


    </LinearLayout>
</FrameLayout>
