<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.don.emertext.LocationDetails">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/location"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="10dp"
            android:inputType="textPersonName"
            android:id="@+id/curLocation"
            android:background="@color/darkGrey"
            android:hint="Enter Location"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:text="Refine Location"
                android:layout_width="275dp"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/location_button"
                android:onClick="startMap"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="HardcodedText" />

            <Button
                android:text="Use Home Address"
                android:layout_width="275dp"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/add_home"
                android:onClick=""
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/emertype"/>

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/emertype_spinner"
            android:entries="@array/emer_type"
            android:background="@color/darkGrey"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/whois"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="10dp"
            android:inputType="textPersonName"
            android:id="@+id/people_with_you"
            android:background="@color/darkGrey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/exdetails"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:minLines="1"
            android:padding="10dp"
            android:inputType="textCapSentences|textAutoCorrect"
            android:id="@+id/extra_details"
            android:background="@color/darkGrey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="Send Text"
            android:layout_width="275dp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/send_text"
            android:onClick="submitInfo"
            android:background="@color/colorAccent"
            tools:ignore="HardcodedText" />
    </LinearLayout>


</RelativeLayout>
